force-app/main/default/objects/Debug_log__c/Debug_log__c.object-meta.xml
<CustomObject>
    <label>Debug log</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Nombre de Debug log</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Debugs logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>