force-app/main/default/objects/Debug_log__c/fields/Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Cuenta__c</fullName>
    <formula>IF(
   Oportunidad__r.Account.IsPersonAccount,
   IF(
      ISBLANK(Oportunidad__r.Account.MiddleName), 
      Oportunidad__r.Account.FirstName &amp; &quot; &quot; &amp; Oportunidad__r.Account.LastName, 
      Oportunidad__r.Account.FirstName &amp; &quot; &quot; &amp; Oportunidad__r.Account.MiddleName &amp; &quot; &quot; &amp; Oportunidad__r.Account.LastName), 
   Oportunidad__r.Account.Name
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cuenta</label>
    <type>Text</type>
</CustomField>