force-app/main/default/objects/Debug_log__c/fields/Error__c.field-meta.xml
<CustomField>
    <fullName>Error__c</fullName>
    <description>Error ocurrido</description>
    <label>Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>