force-app/main/default/objects/Debug_log__c/fields/Horario__c.field-meta.xml
<CustomField>
    <fullName>Horario__c</fullName>
    <description>Día y horario en que ocurrió el error</description>
    <label>Fecha y hora</label>
    <length>255</length>
    <type>Text</type>
</CustomField>