force-app/main/default/objects/Debug_log__c/fields/ID_Objeto__c.field-meta.xml
<CustomField>
    <fullName>ID_Objeto__c</fullName>
    <description>ID del objeto sobre el que ocurrió el error</description>
    <label>ID Objeto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>