force-app/main/default/objects/Debug_log__c/fields/Objeto__c.field-meta.xml
<CustomField>
    <fullName>Objeto__c</fullName>
    <description>Detalle del objeto sobre el que ocurrió el error</description>
    <label>Objeto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>