force-app/main/default/objects/Debug_log__c/fields/Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Oportunidad__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Oportunidad</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Debugs logs</relationshipLabel>
    <relationshipName>Debugs_logs</relationshipName>
    <type>Lookup</type>
</CustomField>