force-app/main/default/objects/Debug_log__c/fields/Producto__c.field-meta.xml
<CustomField>
    <fullName>Producto__c</fullName>
    <formula>Producto_de_la_oportunidad__r.PricebookEntry.Product2.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Producto</label>
    <type>Text</type>
</CustomField>