force-app/main/default/objects/Debug_log__c/fields/Producto_de_la_oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Producto_de_la_oportunidad__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Producto de la oportunidad</label>
    <referenceTo>OpportunityLineItem</referenceTo>
    <relationshipLabel>Debugs logs</relationshipLabel>
    <relationshipName>Debugs_logs</relationshipName>
    <type>Lookup</type>
</CustomField>