force-app/main/default/objects/Debug_log__c/fields/XML__c.field-meta.xml
<CustomField>
    <fullName>XML__c</fullName>
    <description>En caso de errores se almacena el XML del envio que falló.
En caso de reservas se almacena el detalle del cambio en la reserva.</description>
    <label>Detalle</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>