force-app/main/default/objects/Debug_log__c/recordTypes/Error.recordType-meta.xml
<RecordType>
    <fullName>Error</fullName>
    <active>true</active>
    <description>Almacena errores en creacion/actualizacion de registros</description>
    <label>Error</label>
</RecordType>