force-app/main/default/objects/Debug_log__c/recordTypes/Reservas.recordType-meta.xml
<RecordType>
    <fullName>Reservas</fullName>
    <active>true</active>
    <description>Cuando una reserva se modifica se crea un registro para almacenar tales datos</description>
    <label>Reservas</label>
</RecordType>