force-app/main/default/objects/Debug_log__c/listViews/Details_View.listView-meta.xml
<ListView>
    <fullName>Details_View</fullName>
    <columns>NAME</columns>
    <columns>Objeto__c</columns>
    <columns>ID_Objeto__c</columns>
    <filterScope>Mine</filterScope>
    <label>Details View</label>
</ListView>