force-app/main/default/objects/Debug_log__c/listViews/Reserva_de_chasis.listView-meta.xml
<ListView>
    <fullName>Reserva_de_chasis</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Debug_log__c.Reservas</value>
    </filters>
    <label>Reserva de chasis</label>
</ListView>